--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="​Wonderful tours, ​Backpacking Trips, ​Small group travel that&amp;apos;s good all over, ​Enjoy the perfect blend of adventure tours, ​Your adventure starts here, Tours Nature &amp;amp; Wildlife, Get in touch">
     <meta name="description" content="">
-    <title>Главная</title>
+    <title>Vancelot</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Главная.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
