--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="">
     <title>Vancelot</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
+<link rel="shortcut icon" href="/images/favicon.png" type="image/png">
 <link rel="stylesheet" href="Главная.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
