--- a/index.html
+++ b/index.html
@@ -175,6 +175,91 @@
             </div>
             <div class="u-over-slide u-over-slide-12"></div>
           </div>
+
+	    <div class="u-dialog-link u-effect-fade u-effect-hover-zoom u-gallery-item u-shape-rectangle" data-href="#sec-b26a">
+            <div class="u-back-slide" data-image-width="4000" data-image-height="4000">
+              <img class="u-back-image u-expanded" src="images/15.png">
+            </div>
+            <div class="u-over-slide u-over-slide-13"></div>
+          </div>
+
+            <div class="u-dialog-link u-effect-fade u-effect-hover-zoom u-gallery-item u-shape-rectangle" data-href="#sec-b26a">
+            <div class="u-back-slide" data-image-width="2000" data-image-height="2000">
+              <img class="u-back-image u-expanded" src="images/113.png">
+            </div>
+            <div class="u-over-slide u-over-slide-14"></div>
+          </div>
+
+           <div class="u-dialog-link u-effect-fade u-effect-hover-zoom u-gallery-item u-shape-rectangle" data-href="#sec-b26a">
+            <div class="u-back-slide" data-image-width="2000" data-image-height="2000">
+              <img class="u-back-image u-expanded" src="images/22png.png">
+            </div>
+            <div class="u-over-slide u-over-slide-15"></div>
+          </div>
+
+           <div class="u-dialog-link u-effect-fade u-effect-hover-zoom u-gallery-item u-shape-rectangle" data-href="#sec-b26a">
+            <div class="u-back-slide" data-image-width="2000" data-image-height="2000">
+              <img class="u-back-image u-expanded" src="images/6fb8b0a1-e515-5df6-f04c-1890f94654a9.png">
+            </div>
+            <div class="u-over-slide u-over-slide-16"></div>
+          </div>
+
+	   <div class="u-dialog-link u-effect-fade u-effect-hover-zoom u-gallery-item u-shape-rectangle" data-href="#sec-b26a">
+            <div class="u-back-slide" data-image-width="2000" data-image-height="2000">
+              <img class="u-back-image u-expanded" src="images/224.png">
+            </div>
+            <div class="u-over-slide u-over-slide-17"></div>
+          </div>
+
+            <div class="u-dialog-link u-effect-fade u-effect-hover-zoom u-gallery-item u-shape-rectangle" data-href="#sec-b26a">
+            <div class="u-back-slide" data-image-width="2000" data-image-height="2000">
+              <img class="u-back-image u-expanded" src="images/223.png">
+            </div>
+            <div class="u-over-slide u-over-slide-18"></div>
+          </div>
+
+            <div class="u-dialog-link u-effect-fade u-effect-hover-zoom u-gallery-item u-shape-rectangle" data-href="#sec-b26a">
+            <div class="u-back-slide" data-image-width="2000" data-image-height="2000">
+              <img class="u-back-image u-expanded" src="images/112.png">
+            </div>
+            <div class="u-over-slide u-over-slide-19"></div>
+          </div>
+
+            <div class="u-dialog-link u-effect-fade u-effect-hover-zoom u-gallery-item u-shape-rectangle" data-href="#sec-b26a">
+            <div class="u-back-slide" data-image-width="2000" data-image-height="2000">
+              <img class="u-back-image u-expanded" src="images/226.png">
+            </div>
+            <div class="u-over-slide u-over-slide-20"></div>
+          </div>
+
+            <div class="u-dialog-link u-effect-fade u-effect-hover-zoom u-gallery-item u-shape-rectangle" data-href="#sec-b26a">
+            <div class="u-back-slide" data-image-width="2000" data-image-height="2000">
+              <img class="u-back-image u-expanded" src="images/227.png">
+            </div>
+            <div class="u-over-slide u-over-slide-21"></div>
+          </div>
+
+ 	    <div class="u-dialog-link u-effect-fade u-effect-hover-zoom u-gallery-item u-shape-rectangle" data-href="#sec-b26a">
+            <div class="u-back-slide u-back-slide-22" data-image-width="1920" data-image-height="1080">
+              <img src="images/eyes1.png" alt="" data-image-width="2000" data-image-height="1333" class="u-back-image u-expanded u-back-image-22">
+            </div>
+            <div class="u-over-slide u-over-slide-22"></div>
+          </div>
+
+        <div class="u-dialog-link u-effect-fade u-effect-hover-zoom u-gallery-item u-shape-rectangle" data-href="#sec-b26a">
+            <div class="u-back-slide" data-image-width="2000" data-image-height="2000">
+              <img class="u-back-image u-expanded" src="images/16.png">
+            </div>
+            <div class="u-over-slide u-over-slide-23"></div>
+          </div>
+
+	    <div class="u-dialog-link u-effect-fade u-effect-hover-zoom u-gallery-item u-shape-rectangle" data-href="#sec-b26a">
+            <div class="u-back-slide" data-image-width="2000" data-image-height="2000">
+              <img class="u-back-image u-expanded u-back-image-24" src="images/23.png">
+            </div>
+            <div class="u-over-slide u-over-slide-24"></div>
+          </div>
+	     
         </div>
       </div>
     </section>
