--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="">
     <title>Главная</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="Главная.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
