--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 </div>
                 <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-6" data-image-width="660" data-image-height="160">
                   <div class="u-back-slide">
-                    <img class="u-back-image u-expanded u-image-contain" src="images/photo_2023-08-04_00-56-56.jpg">
+                    <img class="u-back-image u-expanded u-image-contain" src="images/image_2024-01-10_22-49-09.png">
                   </div>
                   <div class="u-align-center u-over-slide u-valign-bottom u-over-slide-6"></div>
                   <style data-mode="XL"></style>
